# cloud-image-deploy

./: .clap.yml  .cli-arg-config.yml  .gitignore  .taskcluster.yml  Cargo.toml  group.yml.1  readme.md
.deploy/production/role/worker-pool:gecko-1/: b-win2012-beta.yml
.deploy/production/role/worker-pool:gecko-t/: t-win10-64-beta.yml  t-win7-32-gpu-b.yml
.deploy/production/workerPool/gecko-1/: b-win2012-beta.yml
.deploy/production/workerPool/gecko-2/: b-win2012.yml
.deploy/production/workerPool/gecko-t/: t-win10-64-beta.yml  t-win10-64-gpu-b.yml  t-win7-32-beta.yml  t-win7-32-gpu-b.yml
ci/: cid.py  cloud-image-deploy.py  deploy-on-demand.py  deploy-on-push.py  requirements.txt  set_session_credentials.sh
config/: deploy-on-demand.yml  deploy-on-push.yml  taskcluster-client-options-example.yml  user-options-example.yml
config/production/gecko-t/: win10-64-azure.yml  win7-32-azure.yml
config/production/pool/gecko-3/: b-win2012-c4.yaml  b-win2012-c4.yml  b-win2012-c5.yaml  b-win2012.json  b-win2012.yaml
config/production/pool/gecko-t/: win10-64-azure.yaml  win10-64-azure.yml  win10-64-gpu-azure.yaml  win10-64-gpu-azure.yml  win7-32-azure.yaml  win7-32-gpu-azure.yaml  win7-32-gpu-azure.yml
config/production/pool/relops-3/: linux.yaml
config/production/role/worker-pool:gecko-1/: win2012-azure.yaml
config/production/role/worker-pool:gecko-t/: t-win10-64-gpu-b.yaml  (+5 more)
config/staging/gecko-t/: win10-64-azure.yml  win10-64-gpu-azure.yml  win7-32-azure.yml  win7-32-gpu-azure.yml
script/: mutate-win10-beta.sh  mutate-win2012.sh
src/: main.rs
src/tc/: mod.rs
(+28 files in other folders)
