[package]
name = "cloud-image-deploy"
version = "0.0.1"
authors = ["Rob Thijssen <rthijssen@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
taskcluster = "41.0"
# tokio = { version = "1", features = ["full"] }
# tokio = { version = "0.2", features = ["macros", "time"] }
tokio = "0.2"
