[package]
name = "cloud-image-deploy"
version = "0.0.1"
authors = ["Rob Thijssen <rthijssen@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = {version = "2.33", features = ["yaml"]}
glob = "0.3"
itertools = "0.10"
phf = { version = "0.8", features = ["macros"] }
regex = "1.4"
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
slugid = "1.0"
taskcluster = "41.0"
tokio = "0.2"
